--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -21,7 +21,7 @@
     width: 100%;
   }
 
-  &-bottom &-content-animation {
+  &-bottom &-content-animated {
     flex-direction: row;
 
     .@{tabs-prefix-cls}-tabpane {
