--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -21,7 +21,7 @@
     width: 100%;
   }
 
-  &-top &-content-animation {
+  &-top &-content-animated {
     flex-direction: row;
     .@{tabs-prefix-cls}-tabpane {
       width: 100%;
