--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -22,7 +22,7 @@
     height: 100%;
   }
 
-  &-left &-content-animation {
+  &-left &-content-animated {
     flex-direction: column;
 
     .@{tabs-prefix-cls}-tabpane {
