--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -20,13 +20,13 @@
     margin-top: -3px;
     background-color: #3fc7fa;
     transform-origin: 0 0;
-    transition: transform @effect-duration @easing-in-out,
-    -webkit-transform @effect-duration @easing-in-out;
+    &-animated {
+      transition: transform @effect-duration @easing-in-out;
+    }
   }
 
   &-tab-prev, &-tab-next {
     user-select: none;
-    -webkit-user-select: none;
     z-index: 1;
     line-height: 36px;
     cursor: pointer;
@@ -44,9 +44,8 @@
       vertical-align: baseline;
       text-align: center;
       text-transform: none;
-      -webkit-font-smoothing: antialiased;
-      -webkit-text-stroke-width: 0;
-      -moz-osx-font-smoothing: grayscale;
+      font-smoothing: antialiased;
+      text-stroke-width: 0;
       font-family: sans-serif;
 
       &:before {
@@ -73,8 +72,10 @@
     list-style: none;
     display: inline-block;
     transform-origin: 0 0;
-    transition: transform 0.5s @easing-in-out,
-    -webkit-transform 0.5s @easing-in-out;
+
+    &-animated {
+      transition: transform 0.5s @easing-in-out;
+    }
 
     &:before, &:after {
       display: table;
@@ -123,21 +124,21 @@
     .@{tabs-prefix-cls}-tabpane {
       overflow: auto;
     }
-  }
 
-  &-content-no-animated {
-    .@{tabs-prefix-cls}-tabpane-inactive {
-      display: none;
+    &-animated {
+      transition: transform @effect-duration @easing-in-out;
+      display: flex;
+      will-change: transform;
+
+      .@{tabs-prefix-cls}-tabpane {
+        flex-shrink: 0;
+      }
     }
-  }
 
-  &-content-animated {
-    transition: transform @effect-duration @easing-in-out;
-    display: flex;
-    will-change: transform;
-
-    .@{tabs-prefix-cls}-tabpane {
-      flex-shrink: 0;
+    &-no-animated {
+      .@{tabs-prefix-cls}-tabpane-inactive {
+        display: none;
+      }
     }
   }
 }
