--- a/examples/common.css
+++ b/examples/common.css
@@ -21,14 +21,19 @@
   background-color: #3fc7fa;
   -webkit-transform-origin: 0 0;
           transform-origin: 0 0;
+}
+.rc-tabs-ink-bar-animated {
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
   transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-tab-prev,
 .rc-tabs-tab-next {
-  -moz-user-select: none;
-   -ms-user-select: none;
-       user-select: none;
   -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   z-index: 1;
   line-height: 36px;
   cursor: pointer;
@@ -47,9 +52,8 @@
   vertical-align: baseline;
   text-align: center;
   text-transform: none;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0;
-  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
+  text-stroke-width: 0;
   font-family: sans-serif;
 }
 .rc-tabs-tab-prev-icon:before,
@@ -73,6 +77,11 @@
   display: inline-block;
   -webkit-transform-origin: 0 0;
           transform-origin: 0 0;
+}
+.rc-tabs-nav-animated {
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.5s cubic-bezier(0.35, 0, 0.25, 1);
   transition: transform 0.5s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-nav:before,
@@ -116,9 +125,6 @@
 .rc-tabs-content .rc-tabs-tabpane {
   overflow: auto;
 }
-.rc-tabs-content-no-animated .rc-tabs-tabpane-inactive {
-  display: none;
-}
 .rc-tabs-content-animated {
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
   transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
@@ -132,6 +138,9 @@
 .rc-tabs-content-animated .rc-tabs-tabpane {
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+.rc-tabs-content-no-animated .rc-tabs-tabpane-inactive {
+  display: none;
 }
 .rc-tabs-left {
   border-right: 2px solid #f3f3f3;
