fix mobile safari

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -141,4 +141,9 @@
       }
     }
   }
+
+  .no-csstransitions &-tabpane-inactive,
+  &-content-no-animated &-tabpane-inactive {
+    display: none;
+  }
 }
