Set height of inavtive pane to zero fix #35

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -133,6 +133,10 @@
       .@{tabs-prefix-cls}-tabpane {
         flex-shrink: 0;
       }
+
+      .@{tabs-prefix-cls}-tabpane-inactive {
+        flex-shrink: 0;
+      }
     }
   }
 
