fix height. Fixes #37

--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -63,4 +63,9 @@
     height: 100%;
     margin-right: 30px;
   }
+
+  &-bottom &-tabpane-inactive {
+    height: 0;
+    overflow: visible;
+  }
 }
