--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -4,6 +4,10 @@
     overflow-x: hidden;
   }
 
+  &-bottom &-content {
+    width: 100%;
+  }
+
   &-bottom &-bar {
     border-top: 1px solid #f3f3f3;
   }
