--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -4,6 +4,10 @@
     overflow-x: hidden;
   }
 
+  &-top &-content {
+    width: 100%;
+  }
+
   &-top &-bar {
     border-bottom: 1px solid #f3f3f3;
   }
