feat: add swipeableTabBar for antd-mobile

--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -21,6 +21,12 @@
     width: 99999px;
   }
 
+  &-bottom &-nav-swipe {
+    width: 99999px;
+    position: relative;
+    left: 0;
+  }
+
   &-bottom &-nav-wrap {
     width: 100%;
   }
