--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -34,6 +34,12 @@
     height: 99999px;
   }
 
+  &-left &-nav-swipe {
+    height: 99999px;
+    position: relative;
+    top: 0;
+  }
+
   &-left &-tab-prev, &-left &-tab-next {
     margin-top: -2px;
     height: 32px;
