--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -26,6 +26,12 @@
     height: 99999px;
   }
 
+  &-right &-nav-swipe {
+    height: 99999px;
+    position: relative;
+    top: 0;
+  }
+
   &-right &-tab-prev, &-right &-tab-next {
     margin-top: -2px;
     height: 32px;
