--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -21,6 +21,12 @@
     width: 99999px;
   }
 
+  &-top &-nav-swipe {
+    width: 99999px;
+    position: relative;
+    left: 0;
+  }
+
   &-top &-nav-wrap {
     width: 100%;
   }
