--- a/examples/common.css
+++ b/examples/common.css
@@ -181,6 +181,28 @@
 .rc-tabs-left .rc-tabs-nav-scroll {
   height: 99999px;
 }
+.rc-tabs-left .rc-tabs-nav-swipe {
+  position: relative;
+  top: 0;
+}
+.rc-tabs-left .rc-tabs-nav-swipe .rc-tabs-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+.rc-tabs-left .rc-tabs-nav-swipe .rc-tabs-nav .rc-tabs-tab {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 .rc-tabs-left .rc-tabs-tab-prev,
 .rc-tabs-left .rc-tabs-tab-next {
   margin-top: -2px;
@@ -241,6 +263,27 @@
 }
 .rc-tabs-right .rc-tabs-nav-scroll {
   height: 99999px;
+}
+.rc-tabs-right .rc-tabs-nav-swipe {
+  position: relative;
+}
+.rc-tabs-right .rc-tabs-nav-swipe .rc-tabs-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+.rc-tabs-right .rc-tabs-nav-swipe .rc-tabs-nav .rc-tabs-tab {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .rc-tabs-right .rc-tabs-tab-prev,
 .rc-tabs-right .rc-tabs-tab-next {
@@ -306,6 +349,26 @@
 .rc-tabs-bottom .rc-tabs-nav-scroll {
   width: 99999px;
 }
+.rc-tabs-bottom .rc-tabs-nav-swipe {
+  position: relative;
+  left: 0;
+}
+.rc-tabs-bottom .rc-tabs-nav-swipe .rc-tabs-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+}
+.rc-tabs-bottom .rc-tabs-nav-swipe .rc-tabs-nav .rc-tabs-tab {
+  margin-right: 0;
+  padding: 8px 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 .rc-tabs-bottom .rc-tabs-nav-wrap {
   width: 100%;
 }
@@ -368,6 +431,26 @@
 }
 .rc-tabs-top .rc-tabs-nav-scroll {
   width: 99999px;
+}
+.rc-tabs-top .rc-tabs-nav-swipe {
+  position: relative;
+  left: 0;
+}
+.rc-tabs-top .rc-tabs-nav-swipe .rc-tabs-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+}
+.rc-tabs-top .rc-tabs-nav-swipe .rc-tabs-nav .rc-tabs-tab {
+  margin-right: 0;
+  padding: 8px 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .rc-tabs-top .rc-tabs-nav-wrap {
   width: 100%;
