refactor(SwipeableTabBar): flex prefixer; hammer direction;
close https://github.com/react-component/tabs/issues/65

--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -29,6 +29,8 @@
       flex: 1;
       width: 100%;
       .@{tabs-prefix-cls}-tab {
+        display: flex;
+        flex-shrink: 0;
         margin-right: 0;
         padding: 8px 0;
         justify-content: center;
