--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -34,6 +34,8 @@
       flex-direction: column;
       height: 100%;
       .@{tabs-prefix-cls}-tab {
+        display: flex;
+        flex-shrink: 0;
         justify-content: center;
       }
     }
