add scroll arrow appear animate

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -11,6 +11,7 @@
     white-space: nowrap;
     outline: none;
     zoom: 1;
+    transition: padding .45s;
   }
 
   &-ink-bar {
@@ -95,7 +96,7 @@
     padding: 8px 20px;
     font-weight: 500;
     cursor: pointer;
-
+    overflow: hidden;
     &:hover {
       color: #23c0fa;
     }
@@ -149,4 +150,3 @@
     display: none;
   }
 }
-
