remove rc-animate

--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -57,6 +57,8 @@
     width: 100%;
     display: block;
     text-align: center;
+    opacity: 0;
+    transition: width .3s, height .3s, opacity .3s;
   }
 
   &-left &-tab-next {
