--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -70,6 +70,8 @@
     height: 100%;
     top: 0;
     text-align: center;
+    opacity: 0;
+    transition: width .3s, height .3s, opacity .3s;
   }
 
   &-top &-ink-bar {
