Fix for vertical tabs extra content position
ref ant-design/ant-design#6578

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -19,7 +19,7 @@
     position: absolute;
     box-sizing: border-box;
     margin-top: -3px;
-    background-color: #3fc7fa;
+    background-color: #108ee9;
     transform-origin: 0 0;
     &-animated {
       transition: transform @effect-duration @easing-in-out;
@@ -104,7 +104,7 @@
 
   &-tab-active {
     &, &:hover {
-      color: #3fc7fa;
+      color: #108ee9;
       cursor: default;
       // fix chrome render
       transform: translateZ(0);
@@ -150,4 +150,3 @@
     display: none;
   }
 }
-
