Fix scrollable tabs
close ant-design/ant-design#9324

--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -61,7 +61,10 @@
     transition: width .3s, height .3s, opacity .3s;
   }
 
-  &-top &-tab-arrow-show {
+  &-top &-tab-arrow-show,
+  &-left &-tab-arrow-show,
+  &-bottom &-tab-arrow-show,
+  &-right &-tab-arrow-show {
     opacity: 1;
     width: 100%;
     height: 32px;
