--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -1,6 +1,7 @@
 .@{tabs-prefix-cls} {
   box-sizing: border-box;
   position: relative;
+  overflow: hidden;
 
   &-bar, &-nav-container {
     font-size: 14px;
