Use computed style

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -23,7 +23,7 @@
     background-color: #108ee9;
     transform-origin: 0 0;
     &-animated {
-      transition: transform @effect-duration @easing-in-out;
+      transition: transform @effect-duration @easing-in-out, left @effect-duration @easing-in-out;
     }
   }
 
