--- a/common.css
+++ b/common.css
@@ -22,9 +22,11 @@
   margin-top: -3px;
   background-color: #108ee9;
   transform-origin: 0 0;
+  width: 0;
+  height: 0;
 }
 .rc-tabs-ink-bar-animated {
-  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1), height 0.3s cubic-bezier(0.35, 0, 0.25, 1), width 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-tab-prev,
 .rc-tabs-tab-next {
@@ -228,6 +230,7 @@
 .rc-tabs-left .rc-tabs-ink-bar {
   width: 2px;
   right: 0;
+  top: 0;
 }
 .rc-tabs-left .rc-tabs-tab {
   padding: 16px 24px;
@@ -320,6 +323,7 @@
 .rc-tabs-right .rc-tabs-ink-bar {
   width: 2px;
   left: 0;
+  top: 0;
 }
 .rc-tabs-right .rc-tabs-tab {
   padding: 16px 24px;
