change global rtl style to prefixed class

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -97,7 +97,7 @@
     }
   }
   
-  &.rtl &-nav {
+  &-rtl &-nav {
     float: right;
   }
 
@@ -162,7 +162,7 @@
   &-content-no-animated &-tabpane-inactive {
     display: none;
   }
-  &.rtl{
+  &-rtl{
     direction: rtl;
   }
 }
