--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -56,7 +56,7 @@
     }
   }
 
-  &-top.rtl &-tab-next {
+  &-top&-rtl &-tab-next {
     left: 2px;
     right:auto;
   }
@@ -68,7 +68,7 @@
     }
   }
 
-  &-top.rtl &-tab-prev {
+  &-top&-rtl &-tab-prev {
     right: 0;
     left:auto;
   }
@@ -95,7 +95,7 @@
     left: 0;
   }
 
-  &-top.rtl &-ink-bar {
+  &-top&-rtl &-ink-bar {
     right: 0;
     left:auto;
   }
@@ -106,7 +106,7 @@
     margin-right: 30px;
   }
 
-  &-top.rtl &-tab {
+  &-top&-rtl &-tab {
     float: right;
     margin-left: 30px;
     margin-right: 0;
