--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -56,7 +56,7 @@
     }
   }
 
-  &-bottom.rtl &-tab-next {
+  &-bottom&-rtl &-tab-next {
     left: 2px;
     right:auto;
   }
@@ -68,7 +68,7 @@
     }
   }
   
-  &-bottom.rtl &-tab-prev {
+  &-bottom&-rtl &-tab-prev {
     right: 0;
     left:auto;
   }
@@ -88,7 +88,7 @@
     left: 0;
   }
 
-  &-bottom.rtl &-ink-bar {
+  &-bottom&-rtl &-ink-bar {
     right: 0;
     left:auto;
   }
@@ -99,7 +99,7 @@
     margin-right: 30px;
   }
 
-  &-bottom.rtl &-tab {
+  &-bottom&-rtl &-tab {
     float: right;
     margin-left: 30px;
     margin-right: 0;
