Implemented rtl layout support (#230)
* Implemented rtl layout support

* update readme

* added rtl test and snapshot

* fixed issues mentioned by zombieJ

* fixed issues mentioned by zombieJ

* fix lint errors and added rtl tests

* update tests

* update test

* update tests

* update tests

* change global rtl style to prefixed class

* pass direction to tabbars from parent

* update snapshots

* added comment on getDeltaByKey

* clean up

* fix utils.js issue

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -83,7 +83,6 @@
     list-style: none;
     display: inline-block;
     transform-origin: 0 0;
-
     &-animated {
       transition: transform 0.5s @easing-in-out;
     }
@@ -96,6 +95,10 @@
     &:after {
       clear: both;
     }
+  }
+  
+  &-rtl &-nav {
+    float: right;
   }
 
   &-tab {
@@ -158,5 +161,8 @@
   .no-flexbox &-tabpane-inactive,
   &-content-no-animated &-tabpane-inactive {
     display: none;
+  }
+  &-rtl{
+    direction: rtl;
   }
 }
