--- a/assets/index.less
+++ b/assets/index.less
@@ -2,10 +2,35 @@
 
 @easing-in-out: cubic-bezier(0.35, 0, 0.25, 1);
 
-@effect-duration: .3s;
+@effect-duration: 0.3s;
 
-@import "index/common";
-@import "index/left";
-@import "index/right";
-@import "index/bottom";
-@import "index/top";
+.@{tabs-prefix-cls} {
+  border: 1px solid gray;
+  font-size: 14px;
+
+  &-nav {
+    &-wrap {
+      position: relative;
+      display: inline-block;
+    }
+  }
+
+  &-tab {
+    border: 0;
+    font-size: 20px;
+    background: transparent;
+  }
+
+  &-ink-bar {
+    position: absolute;
+    background: red;
+    height: 3px;
+    width: 20px;
+    bottom: 0;
+    pointer-events: none;
+
+    &-animated {
+      transition: all 0.3s;
+    }
+  }
+}
