--- a/assets/index.less
+++ b/assets/index.less
@@ -23,6 +23,12 @@
       overflow: hidden;
       display: flex;
     }
+
+    &-more {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
   }
 
   &-tab {
