--- a/assets/dropdown.less
+++ b/assets/dropdown.less
@@ -16,8 +16,12 @@
     padding: 0;
     list-style: none;
 
-    li {
+    &-item {
       padding: 4px 8px;
+
+      &-selected {
+        background: red;
+      }
     }
   }
 }
