--- a/assets/index.less
+++ b/assets/index.less
@@ -1,4 +1,5 @@
 @import './dropdown.less';
+@import './panels.less';
 
 @tabs-prefix-cls: rc-tabs;
 
@@ -11,6 +12,7 @@
   font-size: 14px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   // ========================== Navigation ==========================
   &-nav {
@@ -65,6 +67,4 @@
   &-extra-content {
     flex: none;
   }
-
-  // ============================ Panels ============================
 }
