--- a/assets/index.less
+++ b/assets/index.less
@@ -1,5 +1,6 @@
 @import './dropdown.less';
 @import './panels.less';
+@import './position.less';
 
 @tabs-prefix-cls: rc-tabs;
 
@@ -10,8 +11,6 @@
 .@{tabs-prefix-cls} {
   border: 1px solid gray;
   font-size: 14px;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
 
   // ========================== Navigation ==========================
@@ -29,9 +28,6 @@
     }
 
     &-more {
-      // position: absolute;
-      // right: 0;
-      // top: 0;
       flex: none;
       background: rgba(255, 0, 0, 0.1);
     }
@@ -54,9 +50,6 @@
   &-ink-bar {
     position: absolute;
     background: red;
-    height: 3px;
-    width: 20px;
-    bottom: 0;
     pointer-events: none;
 
     &-animated {
