--- a/assets/index.less
+++ b/assets/index.less
@@ -16,6 +16,7 @@
   // ========================== Navigation ==========================
   &-nav {
     display: flex;
+    position: relative;
 
     &-measure,
     &-wrap {
