fix holder added

--- a/assets/index.less
+++ b/assets/index.less
@@ -46,6 +46,10 @@
     &:focus {
       background: rgba(0, 0, 255, 0.1);
     }
+
+    &-placeholder {
+      flex: none;
+    }
   }
 
   &-ink-bar {
