--- a/assets/position.less
+++ b/assets/position.less
@@ -11,6 +11,10 @@
     .@{tabs-prefix-cls}-ink-bar {
       height: 3px;
     }
+
+    .@{tabs-prefix-cls}-tab-placeholder {
+      width: 100px;
+    }
   }
 
   &-top {
@@ -38,6 +42,10 @@
   &-right {
     .@{tabs-prefix-cls}-ink-bar {
       width: 3px;
+    }
+
+    .@{tabs-prefix-cls}-tab-placeholder {
+      height: 100px;
     }
 
     .@{tabs-prefix-cls}-nav {
