--- a/assets/position.less
+++ b/assets/position.less
@@ -12,7 +12,7 @@
       height: 3px;
     }
 
-    .@{tabs-prefix-cls}-tab-placeholder {
+    .@{tabs-prefix-cls}-nav-wrap::after {
       width: 100px;
     }
   }
@@ -44,7 +44,7 @@
       width: 3px;
     }
 
-    .@{tabs-prefix-cls}-tab-placeholder {
+    .@{tabs-prefix-cls}-nav-wrap::after {
       height: 100px;
     }
 
