--- a/assets/panels.less
+++ b/assets/panels.less
@@ -4,7 +4,10 @@
   &-content {
     display: flex;
     width: 100%;
-    transition: margin 0.3s;
+
+    &-animated {
+      transition: margin 0.3s;
+    }
   }
 
   &-tabpane {
