fix resize logic

--- a/assets/index.less
+++ b/assets/index.less
@@ -16,6 +16,7 @@
   // ========================== Navigation ==========================
   &-nav {
     display: flex;
+    flex: none;
     position: relative;
 
     &-measure,
