--- a/assets/panels.less
+++ b/assets/panels.less
@@ -3,7 +3,7 @@
 .@{tabs-prefix-cls} {
   &-content {
     display: flex;
-    width: 100%;
+    flex: auto;
 
     &-animated {
       transition: margin 0.3s;
