--- a/assets/position.less
+++ b/assets/position.less
@@ -64,6 +64,14 @@
   }
 
   &-right {
+    .@{tabs-prefix-cls}-nav {
+      order: 1;
+    }
+
+    .@{tabs-prefix-cls}-content {
+      order: 0;
+    }
+
     .@{tabs-prefix-cls}-ink-bar {
       left: 0;
     }
