--- a/assets/panels.less
+++ b/assets/panels.less
@@ -2,8 +2,12 @@
 
 .@{tabs-prefix-cls} {
   &-content {
+    &-holder {
+      flex: auto;
+    }
+
     display: flex;
-    flex: auto;
+    width: 100%;
 
     &-animated {
       transition: margin 0.3s;
