add rtl className

--- a/assets/index.less
+++ b/assets/index.less
@@ -1,6 +1,7 @@
 @import './dropdown.less';
 @import './panels.less';
 @import './position.less';
+@import './rtl.less';
 
 @tabs-prefix-cls: rc-tabs;
 
