--- a/assets/index.less
+++ b/assets/index.less
@@ -22,6 +22,7 @@
 
     &-measure,
     &-wrap {
+      transform: translate(0);
       position: relative;
       display: inline-block;
       flex: auto;
