--- a/assets/index.less
+++ b/assets/index.less
@@ -29,6 +29,10 @@
       white-space: nowrap;
       overflow: hidden;
       display: flex;
+    }
+
+    &-list {
+      display: flex;
 
       &::after {
         content: '';
