--- a/assets/position.less
+++ b/assets/position.less
@@ -51,7 +51,7 @@
     .@{tabs-prefix-cls}-nav {
       flex-direction: column;
 
-      &-wrap {
+      &-list {
         flex-direction: column;
       }
     }
