not allow in dropdown

--- a/assets/dropdown.less
+++ b/assets/dropdown.less
@@ -22,6 +22,11 @@
       &-selected {
         background: red;
       }
+
+      &-disabled {
+        opacity: 0.3;
+        cursor: not-allowed;
+      }
     }
   }
 }
