--- a/assets/index.less
+++ b/assets/index.less
@@ -34,6 +34,7 @@
     &-list {
       display: flex;
       position: relative;
+      transition: transform 0.3s;
 
       &::after {
         content: '';
